--- a/big_smoke_order.html
+++ b/big_smoke_order.html
@@ -9,11 +9,15 @@
  		#hide{
  			display: none;
  		}
+ 		#style{
+ 			display: none;
+ 		}
  	</style>
  </head>
  <body>
- 	<button id="show">Click To Show</button>
- 	<button id="hide">Click To Hide</button>
+ 	<button id="show">Click to Show</button>
+ 	<button id="hide">Click to Hide</button>
+ 	<button id="style">Click to Style</button>
  	<table align="center" border="2">
  		<tr>
  			<td><b>Order</b></td>
@@ -50,6 +54,7 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
  <script>
  	$(document).ready(function(){
+ 		// awal Button Show
  		$("button#show").click(function(){
  			$("table").show();
  		});
@@ -62,6 +67,24 @@
  		$("button#show").click(function(){
  			$("button#hide").show();
  		});
+ 		$("button#show").click(function(){
+ 			$("button#style").show()
+ 		});
+ 		$("button#show").click(function(){
+ 			$("tr:even").css("background-color", "white");
+ 			$("tr:odd").css("background-color", "white");
+ 		});
+ 		// akhir Button Show
+ 		// awal Button Style
+ 		$("button#style").click(function(){
+ 			$(this).hide();
+ 		});
+ 		$("button#style").click(function(){
+ 			$("tr:even").css("background-color", "lightblue");
+ 			$("tr:odd").css("background-color", "lightgreen");
+ 		});
+ 		// akhir Button Style
+ 		// awal Button Hide
  		$("button#hide").click(function(){
  			$("button#show").show();
  		});
@@ -71,6 +94,10 @@
  		$("button#hide").click(function(){
  			$(this).hide();
  		});
+ 		$("button#hide").click(function(){
+ 			$("button#style").hide()
+ 		});
+ 		// akhir Button Hide
  	});
  </script>
  </body>
